tests/baselines/reference/aliasErrors.errors.txt
==== tests/cases/compiler/aliasErrors.ts (12 errors) ====
    module foo {    
        export class Provide {
        }
        export module bar { export module baz {export class boo {}}}
    }
    
    import provide = foo;
    import booz = foo.bar.baz;
    import beez = foo.bar;
    
    import m = no;
    ~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
               ~~
!!! error TS2179: Unable to resolve module reference 'no'.
    import m2 = no.mod;
                ~~
!!! error TS2179: Unable to resolve module reference 'no'.
    import n = 5;
               ~
!!! error TS1003: Identifier expected.
    ~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    import o = "s";
               ~~~
!!! error TS1003: Identifier expected.
    ~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    import q = null;
               ~~~~
!!! error TS1006: Identifier expected; 'null' is a keyword.
    ~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    import r = undefined;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
               ~~~~~~~~~
!!! error TS2179: Unable to resolve module reference 'undefined'.
    
    
    var p = new provide.Provide();
    
    function use() {
        
      beez.baz.boo;
      var p1: provide.Provide; 
      var p2: foo.Provide;
      var p3:booz.bar;
                  ~~~
!!! error TS2094: The property 'bar' does not exist on value of type 'foo.bar.baz'.
      var p22 = new provide.Provide();
    }
    
    